--- a/prueba.html
+++ b/prueba.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Plantilla</title>
+    <title>IconoPrueba</title>
     <meta name="description" content="Esto es una prueba de iconos">
     <meta name="keywords" content="html, prueba, icono, ejemplo">
     <meta name="author" content="Juan Manuel Caballero Morales">
