--- a/prueba.html
+++ b/prueba.html
@@ -12,14 +12,8 @@
     <link rel="icon" sizes="64x64" href="./assets/img/_fondo.jpg">
 </head>
 <body>
-    <p>Hola
-        sfdsd
-        vv
-
-        dds
-        s
-        sfgr
-        
+    <p>Holaaaaaaaaaa
     </p>
+    <p>mmm</p>
 </body>
 </html>
