--- a/EjercicioMarcadoBásico.html
+++ b/EjercicioMarcadoBásico.html
@@ -12,8 +12,10 @@
 </head>
 <body>
     <h1>Título</h1>
-    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Repellat earum <strong>nobis fuga vitae tempore itaque debitis atque deserunt assumenda, at numquam vero reprehenderit repellendus, ipsum enim maxime esse molestias cum </strong>.
-        <br><br> <em>Lorem ipsum dolor sit amet consectetur, adipisicing elit. </em> aut adipisci voluptas perferendis temporibus, nostrum nulla eligendi possimus sunt molestiae voluptatibus quos natus vel, nihil officiis exercitationem, harum architecto mollitia?
+    <p>Lorem ipsum dolor sit amet <u>consectetur adipisicing elit. Repellat earum</u> <strong>nobis fuga vitae tempore itaque debitis atque deserunt assumenda, at numquam vero reprehenderit repellendus, ipsum enim maxime esse molestias cum </strong>.
+        <br><br> <em>Lorem ipsum dolor sit amet consectetur, adipisicing elit. </em> aut adipisci voluptas perferendis temporibus, nostrum nulla eligendi possimus sunt molestiae voluptatibus quos natus vel, <s>nihil officiis exercitationem, harum architecto mollitia?</s>
     </p>
+        <blockquote>Lorem ipsum dolor sit amet consectetur adipisicing elit. Iusto, quas, ipsum, nulla dolore eaque iure nam quo provident reprehenderit officia explicabo sit repellat ullam veniam odit incidunt cum natus! Non?</blockquote>
+
 </body>
 </html>
