--- a/EjercicioAcronimosDefiniciones.html
+++ b/EjercicioAcronimosDefiniciones.html
@@ -12,7 +12,7 @@
 </head>
 <body>
     <h1>El Ártico ha perdido el 14% de su hielo marino perenne en un solo año</h1>
-    <p><b>WASHINGTON.</b>- El <acronym title="Hielo que sobrevive al verano"> hielo perenne </acronym>  del Ártico se redujo en un 14% durante el último año, al perder <b>720.000 kilómetros cuadrados</b>, una superficie superior a la Península Ibérica, según los datos de la NASA.</p>
+    <p><b>WASHINGTON.</b>- El <abbr title="Hielo que sobrevive al verano"> hielo perenne </abbr>  del Ártico se redujo en un 14% durante el último año, al perder <b>720.000 kilómetros cuadrados</b>, una superficie superior a la Península Ibérica, según los datos de la NASA.</p>
     <p>Según el JPL, la pérdida de hielo perenne, que debiera mantenerse durante todo el verano, fue todavía mayor y se acercó a un 50% en el momento en que ese hielo se desplazaba desde  <dfn title="Referente al mar de Siberia o el Ártico de América el Norte"> el Ártico oriental </dfn> hacia el oeste.</p>
     <p><b>Son Nghiem</b>, investigador del JPL ha declarado que:</p>
     <blockquote>"<i>Los cambios registrados en esos años en el hielo ártico son rápidos y espectaculares. De mantenerse la situación, ésta tendrá un impacto profundo en el ambiente, así como en el transporte marino y el comercio.</i>"</blockquote>
