--- a/Ejercicio1.html
+++ b/Ejercicio1.html
@@ -19,7 +19,7 @@ otro y también puede cambiar de una versión a otra de un mismo navegador, pero
 <h2>Historia de HTML</h2>
 <p>Los inicios del lenguaje <b>HTML</b> se remontan al año 1990, cuando <em>Tim Berners-Lee</em> creó la primera página web.</p>
 <h2>Versiones de HTML</h2>
-<p><em>Tim Berners-Lee</em> definió la primera versión de HTML en el año 1991.</p>
+<p><em>Tim Berners-Lee</em> definió la primera versión de <b>HTML</b> en el año 1991.</p>
 <p>En la actualidad, la última versión de <b>HTML</b> es HTML5.</p>
 </body>
 </html>
