--- a/Ejercicio17.html
+++ b/Ejercicio17.html
@@ -12,8 +12,7 @@
 </head>
 <body>
 <h2>Salto de línea con &lt;BR&gt; </h2>
-<p>Estaba internándose en lo desconocido.<br>Durante todo el trayecto hasta Woodfield no dejó de pensar en los aspectos económicos, con el temor de estar cometiendo...
-</p>
+<p>Estaba internándose en lo desconocido.<br>Durante todo el trayecto hasta Woodfield no dejó de pensar en los aspectos económicos, con el temor de estar cometiendo...<hr></p>
 <h2>Salto de línea con &lt;P&gt;</h2>
 <p>Estaba internándose en lo desconocido.</p>
 <p>Durante todo el trayecto hasta Woodfield no dejó de pensar en los aspectos económicos, con el temor de estar cometiendo...</p>
