--- a/Ejercicio4.html
+++ b/Ejercicio4.html
@@ -6,7 +6,7 @@
 <body>
 <h1>World Wide Web</h1>
 <p>
-En informática, la <strong><em>World Wide Web</em></strong><!--Aquí las etiquetas strong y em estaban mal posicionadas--> (WWW) o Red informática mundial comúnmente conocida como la web, es un sistema de distribución de documentos de hipertexto o hipermedios interconectados y accesibles vía Internet. Con un navegador web, un usuario visualiza sitios web compuestos de páginas web que pueden contener texto, imágenes, vídeos u otros contenidos multimedia, y navega a través de esas páginas usando hiperenlaces.
+En informática, la <strong><em>World Wide Web</em></strong><!--Aquí las etiquetas strong y em estaban mal posicionadas--> (WWW) o Red informática mundial comúnmente conocida como la web, es un sistema de distribución de documentos de hipertexto o hipermedios interconectados y accesibles vía Internet. Con un navegador web, un usuario visualiza sitios web compuestos de páginas web que pueden contener texto, imágenes, vídeos u otros contenidos multimedia, y navega a través de esas páginas usando hiperenlaces.</p>
 <h2>Historia</h2>
 <p>
 La web se desarrolló entre marzo de 1989 y diciembre de 1990 por el inglés Tim Berners-Lee con la ayuda del belga Robert Cailliau mientras trabajaban en el CERN en Ginebra, Suiza, y
