--- a/Ejercicio3.html
+++ b/Ejercicio3.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Plantilla</title>
+    <title>Ejercicio3</title>
     <meta name="description" content="Esto es el ejercicio 3 del boletín.">
     <meta name="keywords" content="html, ejercicio3">
     <meta name="author" content="Juan Manuel Caballero">
