--- a/Ejercicio1.html
+++ b/Ejercicio1.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Plantilla</title>
+    <title>Ejercicio1</title>
     <meta name="description" content="Esto es el ejercicio 1 del boletín.">
     <meta name="keywords" content="html, ejercicio1">
     <meta name="author" content="Juan Manuel Caballero">
