--- a/Ejercicio23.html
+++ b/Ejercicio23.html
@@ -12,8 +12,8 @@
 </head>
 <body>
     <h1>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;Primera página</h1>
-    <p>Enlace a la <a href="https://campus.ilerna.com/ultra/course">página segunda</a></p>
-    <p>Enlace a la página de <a href="Ejercicio1.html">Taller Tecno</a></p>
-    <p>Enlace a un <a href="Ejercicio2.html">archivo PDF</a> de mi carpeta</p>
+    <p>Enlace a la <a href="Ejercicio1.html">página segunda</a></p>
+    <p>Enlace a la página de <a href="https://campus.ilerna.com/ultra/course" target="_blank">Taller Tecno</a></p>
+    <p>Enlace a un <a href="C:\Users\jmcabmor\Lenguajes-de-marca\assets\EJERCICIOS UD3 Utilizacion de Lenguajes de Marcas en Entorno Web (HTML 5).pdf" target="_blank">archivo PDF</a> de mi carpeta</p>
 </body>
 </html>
