--- a/Ejercicio25.html
+++ b/Ejercicio25.html
@@ -14,7 +14,7 @@
     <p><a href="Ejercicio1.html"><u>Enlace con el estilo por defecto</u></a></p>
     <p><a href="Ejercicio2.html"><u>Enlace de color rojo</u></a></p>
     <p><a href="Ejercicio3.html">Enlace sin subrayado</a></p>
-    <h2><a href="Ejercicio4.html">Enlace muy importante</a></h2>
+    <p><a href="Ejercicio4.html">Enlace muy importante</a></p>
     <p><a href="Ejercicio16.html">Enlace con un estilo raro</a></p>
 </body>
 </html>
