--- a/Ejercicio27.html
+++ b/Ejercicio27.html
@@ -12,6 +12,25 @@
 </head>
 <body>
     <h1>REINO ANIMAL</h1>
-    <blockquote>1. <a href="#artropodos">Artrópodos</a><br>2. <a href="#equinodermos">Equinodermos</a><br>3. <a href="#moluscos">Moluscos</a><br>4. <a href="#esponjas">Esponjas</a><br>5. <a href=#nematodos>Nematodos</a></blockquote>
+    <blockquote>1. <a href="#artropodos">Artrópodos</a><br>2. <a href="#equinodermos">Equinodermos</a><br>3. <a href="#moluscos">Moluscos</a><br>4. <a href="#esponjas">Esponjas</a><br>5. <a href="#nematodos">Nematodos</a></blockquote>
+    <h2><a name="artropodos">1. Artrópodos</a></h2>
+    <p>Exoesqueleto de quitina y patas articuladas.</p>
+    <p>Fotografía</p>
+
+    <h2><a name="equinodermos">2. Equinodermos</a></h2>
+    <p>Simetría pentarradiada, esqueleto externo de piezas calcáreas.</p>
+    <p>Fotografía</p>
+
+    <h2><a name="moluscos">3. Moluscos</a></h2>
+    <p>Boca con rádula, pie muscular y manto alrededor de la concha.</p>
+    <p>Fotografía</p>
+
+    <h2><a name="esponjas">4. Esponjas</a></h2>
+    <p>Parazoos; sin simetría definida; cuerpo perforado por poros inhalantes.</p>
+    <p>Fotografía</p>
+    
+    <h2><a name="nematodos">5. Nematodos</a></h2>
+    <p>Gusanos pseudocelomados de sección circular con cutícula quitinosa.</p>
+    <p>Fotografía</p>
 </body>
 </html>
