--- a/Ejercicio27.html
+++ b/Ejercicio27.html
@@ -12,7 +12,7 @@
 </head>
 <body>
     <h1>REINO ANIMAL</h1>
-    <blockquote>1. <a href="#artropodos">Artrópodos</a><br>2. <a href="#equinodermos">Equinodermos</a><br>3. <a href="#moluscos">Moluscos</a><br>4. <a href="#esponjas">Esponjas</a><br>5. <a href="#nematodos">Nematodos</a></blockquote>
+    <ol><li><a href="#artropodos">Artrópodos</a></li><li><a href="#equinodermos">Equinodermos</a></li><li><a href="#moluscos">Moluscos</a></li><li><a href="#esponjas">Esponjas</a></li><li><a href="#nematodos">Nematodos</a></li></ol>
     <h2><a name="artropodos">1. Artrópodos</a></h2>
     <p>Exoesqueleto de quitina y patas articuladas.</p>
     <p>Fotografía</p>
