--- a/Ejercicio31.html
+++ b/Ejercicio31.html
@@ -12,7 +12,7 @@
 </head>
 <body>
     <h1>Tutorial de MySQL</h1>
-    <p><a href="#intro">Introducción</a><br><a href="#show">show databases</a><br><a href="#crea">Creación de una tabla y mostrar sus campos</a><br><a href="#carga">Carga de registros a una tabla y su recuperación</a></p>
+    <dl><dt><a href="#intro">Introducción</a></dt><dt><a href="#show">show databases</a></dt><dt><a href="#crea">Creación de una tabla y mostrar sus campos</a></dt><dt><a href="#carga">Carga de registros a una tabla y su recuperación</a></dt></dl>
     <h2><a name="intro">Introducción</a></h2>
     <p>SQL, Structure Query Language (Lenguaje de Consulta Estructurado) es un lenguaje de programación para trabajar con base de datos relacionales como MySQL, Oracle, etc. MySQL es un interpretador de SQL, es un servidor de base de datos.</p>
     <h2><a name="show">show databases</a></h2>
