--- a/Ejercicio21.html
+++ b/Ejercicio21.html
@@ -18,7 +18,7 @@
     <li><a href="Ejercicio4.html">Estilos</a><br>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;[EJERCICIO 3] Cuatro párrafos con estilo </li>
     <li><a href="Ejercicio16.html">Párrafos</a> <br>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;[EJERCICIO 4] Datos y números </li>
     <li><a href="Ejercicio17.html">Formato de texto</a><br>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;[EJERCICIO 5] Formatos de texto </li>
-    <li><a href="Ejercicio19.html">Cabeceras</a>
+    <li><a href="Ejercicio19.html">Cabeceras</a></li>
     <li><a href="EjercicioAcronimosDefiniciones.html">8. Enlaces</a><br>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;[EJERCICIO 6] Enlaces favoritos</li>
     <li><a href="EjercicioCorreo.html">Listas</a><br>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;[EJERCICIO 7] Listas de enlaces</li>
     <li><a href="EjercicioEnlace.html">Imágenes</a><br>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;[EJERCICIO 8] Receta de patatas fritas </li>
