--- a/Ejercicio4.html
+++ b/Ejercicio4.html
@@ -16,4 +16,5 @@ publicado en 1992.
 Desde entonces, Berners-Lee ha jugado un papel activo guiando el desarrollo de estándares web (como los lenguajes de marcado con los que se crean las páginas web), y en los últimos años ha abogado por su visión de una web semántica.
 </p>
 <p>Fuente: <em>Wikipedia</em></p> <!--Aquí las etiquetas p y em estaban mal posicionadas-->
+</body>
 </html>
