--- a/EjercicioMultimedia.html
+++ b/EjercicioMultimedia.html
@@ -20,6 +20,7 @@
     <audio controls src="assets\audioejercicio.mp3" preload="auto"></audio>
     <hr>
     <h2>Ejercicios de video</h2>
-    <video src="assets\videoejercicio.mp4" width="500" height="500" controls autoplay preload="auto"></video> <video src="assets\videoejercicio.mp4" width="500" height="500" controls autoplay preload="auto"></video> <video src="assets\videoejercicio.mp4" width="500" height="500" controls autoplay preload="auto"></video>
+    <video src="assets\videoejercicio.mp4" width="250" height="auto" controls autoplay preload="auto"></video> <video src="assets\videoejercicio.mp4" width="250" height="auto" controls autoplay preload="auto"></video> <video src="assets\videoejercicio.mp4" width="250" height="auto" controls autoplay preload="auto"></video>
+    <hr>
 </body>
 </html>
