--- a/Ejercicio85.html
+++ b/Ejercicio85.html
@@ -16,5 +16,20 @@
         <li>Primer lista</li>
         <li>Primer lista</li>
     </ul>
+    <ul type="square">
+        <li>SEGUNDA LISTA</li>
+        <li>SEGUNDA LISTA</li>
+        <li>SEGUNDA LISTA</li>
+    </ul>
+    <ol type="I">
+        <li>Tercera lista</li>
+        <li>Tercera lista</li>
+        <li>Tercera lista</li>
+    </ol>
+    <ol style="list-style-type: lower-greek;">
+        <li>Cuarta LISTA</li>
+        <li>Cuarta LISTA</li>
+        <li>Cuarta LISTA</li>
+    </ol>
 </body>
 </html>
