--- a/Ejercicio95.html
+++ b/Ejercicio95.html
@@ -14,6 +14,12 @@
     <h2>Tarea Opcional Módulo 2</h2>
     <p>Realiza una página que utilice imágenes responsive con la etiqueta picture, que contenga un vídeo de Youtube y archivos de imagen vectorial SVG.</p>
     <h3>Etiqueta &lt;Picture&gt;</h3>
-    <picture src="assets\img95.png"></picture>
+    <picture><img src="assets\img95.png"></picture>
+    <h3>Imagen Vectorial</h3>
+    <img src="assets\img95_2.png">
+    <h3>Video de Youtube</h3>
+    <video src="https://www.youtube.com/watch?v=c8yMJ4ritTs" controls autoplay></video>
+    <h3>Fin de Tarea</h3>
+    <a href="Ejercicio1.html"><p>Regreso al Menú Principal</p></a>
 </body>
 </html>
