--- a/Ejercicio44.html
+++ b/Ejercicio44.html
@@ -12,10 +12,10 @@
 </head>
 <body style="padding: 100px;background-color: rgb(16, 139, 207);">
     <header style="background-color: white;padding: 10px;border-radius: 10px;width: 1500px;">
-        <span><span style="font-size: large;">Únete a Tuenti</span> <span style="color: rgb(177, 175, 175);">Todos los campos son obligatorios</span></span>
+        <span style="font-size: large;">Únete a Tuenti</span> <span style="color: rgb(177, 175, 175);">Todos los campos son obligatorios</span>
     <br><br>
     <form>
-        Nombre <input type="text" value="Nombre"> Apellidos <input type="text" value="Apellidos">
+        Nombre <input type="text" placeholder="Nombre"> Apellidos <input type="text" placeholder="Apellidos">
         <br><br>
         Email: <input type="text">
         <br><br>
